--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,9 @@ body {
   max-width: 800px;
   margin: 40px auto;
   padding: 20px;
+  color: #fff;
   background-color: #333;
-  border: 1px solid #fff;
+  border: 1px solid #ddd;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -24,10 +25,6 @@ blockquote {
   text-align: center;
   margin: 15px 0;
 }
-
-/* img {
-  display: block;
-} */
 
 #img-div {
   text-align: center;
